ITM and Bug id: 558,559,560

--- a/ProAcc/Views/Customers/Index.cshtml
+++ b/ProAcc/Views/Customers/Index.cshtml
@@ -39,7 +39,7 @@
                         <a class="txtG" value="@item.Contact">@item.Contact</a>
                     </td>
                     <td>
-                        <a class="txtG" value="@item.Phone">@item.Phone</a>
+                        <a class="txtG" value="@item.Phone">@item.Phone.Replace(" ","")</a>
                     </td>
                     <td>
                         <a class="txtG" value="@item.Email">@item.Email</a>
