--- a/ProAcc/Views/ProjectCreation/_PMTaskCreate.cshtml
+++ b/ProAcc/Views/ProjectCreation/_PMTaskCreate.cshtml
@@ -4,7 +4,7 @@
 
 
 <a class="card-title" id="prjtCreate">PM Task Creation</a>
-<a class="card-title" id="prjtUpdate" style="display:none">Update</a>
+<a class="card-title" id="prjtUpdate" style="display:none">Update PM Task</a>
 
 <hr />
 <div style="padding: 1em;max-width: 99.5%;" id="PM-Create">
@@ -237,10 +237,10 @@
 
                             $("#btnAddNew").hide();
                             $("#btnUpdate").hide();
-                            //$("#btnCreate").show();
+                            $("#btnCreate").show();
                             $("#btnCreate").prop('disabled', true);
-                            //$("#prjtCreate").show();
-                            //$("#prjtUpdate").hide();
+                            $("#prjtCreate").show();
+                            $("#prjtUpdate").hide();
 
                         }
                     },
